Fix horizontal scrollbar

--- a/src/components/SplitBox.css
+++ b/src/components/SplitBox.css
@@ -13,6 +13,7 @@
 
 .split-box.vert {
   flex-direction: row;
+  overflow-x: hidden;
 }
 
 .split-box.horz {
